Bug #58350: 5.5.7-rc compile failed at sp_head.cc

Fixed the references to security_ctx->priv_user
to be real char * pointers instead of a C array name reference.
This is somehow important for some 3d party 
dtrace replacements